recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:6: error: type mismatch;
 found   : (List[Int], Int)
 required: Int
    return (l.tail,n-1)
           ^